# kinova-ros

kinova_bringup/launch/: kinova_robot.launch
kinova_control/config/: m1n6s200_control.yaml  m1n6s200_moveit_control.yaml
kinova_control/launch/: kinova_control.launch  kinova_moveit_control.launch  kinova_rqt.launch
kinova_control/src/: move_robot.py
kinova_description/launch/: display_kinova_robot.launch  kinova_frames.rviz  simulate_kinova_robot.launch
kinova_description/urdf/: j2n4s300_standalone.xacro  j2n6s200_standalone.xacro  j2n6s300_ori.xacro  j2n6s300_standalone.xacro  j2n7s300_standalone.xacro  j2s6s300_ori.xacro  j2s6s300_standalone.xacro  j2s7s300_standalone.xacro  kinova.gazebo  kinova_common.xacro  kinova_inertial.xacro  m1n6s200.xacro  m1n6s300_standalone.xacro  room_ori.xacro  two_arm_robot_example_standalone.xacro
kinova_gazebo/launch/: robot_launch.launch
kinova_moveit/inverse_kinematics_plugins/ikfast/m1n6s200_ikfast/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
kinova_moveit/inverse_kinematics_plugins/ikfast/m1n6s200_ikfast/src/: m1n6s200_mico_arm_ikfast_moveit_plugin.cpp
kinova_moveit/kinova_arm_moveit_demo/: CMakeLists.txt  package.xml
kinova_moveit/kinova_arm_moveit_demo/src/: pick_server.cpp
kinova_moveit/kinova_manipulation/: CMakeLists.txt  package.xml
kinova_moveit/kinova_manipulation/include/: manipulation.h
kinova_moveit/kinova_manipulation/launch/: robot.launch
kinova_moveit/kinova_manipulation/src/: manipulation.cpp  pick_client.py  pick_server.cpp  pick_test.cpp
kinova_moveit/kinova_manipulation/srv/: Grasp_Place.srv  Pick_Place.srv
kinova_moveit/robot_configs/j2n6s300_moveit_config/launch/: moveit.rviz  planning_context.launch
kinova_moveit/robot_configs/m1n6s200_moveit_config/: .setup_assistant  package.xml
kinova_moveit/robot_configs/m1n6s200_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  m1n6s200.srdf  ompl_planning.yaml
kinova_moveit/robot_configs/m1n6s200_moveit_config/launch/: demo.launch  m1n6s200_demo.launch  m1n6s200_virtual_robot.launch  move_group.launch  move_group_m1n6s200.launch  moveit.rviz
